--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,13 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #1f2d40;
+    color: #fff;
+    border: 1px solid #304562;
+}
