--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,6 +1,7 @@
 
 <div class="navbar">
     <button pButton class="p-button-sm" icon="pi pi-bars" (click)="showSidebar()"></button>
+    <span class="hidden md:inline-block">StockApp</span>
     <p-splitButton styleClass="p-button-outlined p-button-sm" 
         label="Marshall" icon="pi pi-user" [model]="userItems"></p-splitButton>
 </div>
