--- a/src/app/stock/main/main.component.html
+++ b/src/app/stock/main/main.component.html
@@ -1,3 +1,5 @@
 <app-sidebar></app-sidebar>
 
-<router-outlet></router-outlet>
+<div class="md:p-4">
+    <router-outlet></router-outlet>
+</div>    
