--- a/src/app/stock/products/products.component.html
+++ b/src/app/stock/products/products.component.html
@@ -8,5 +8,23 @@
 
 <p-dialog header="Formulario product" [modal]="true" [style]="{width: '550px'}"
     [(visible)]="dialogDisplay" [draggable]="false" [resizable]="false" [dismissableMask]="true">
+    <form autocomplete="off"
+        [formGroup]="productForm"
+        (ngSubmit)="saveProduct()">
+        <div class="p-fluid grid">
+            <div class="field col-12 md:col-12">
+                <label for="name">Nombre</label>
+                <input pInputText class="p-inputtext-sm"
+                [ngClass]="fieldValid('name') ? 'p-inputtext-sm ng-dirty ng-invalid' : 'p-inputtext-sm'"
+                formControlName="name"
+                aria-describedby="name-help"
+                type="text"
+                id="name" required autofocus>
+                <small id="name-help" class="p-error block" *ngIf="fieldValid('name')">
+                    El nombre debe tener por lo menos 3 caracteres
+                </small>    
+            </div>
 
+        </div>            
+    </form>
 </p-dialog>
