--- a/src/app/stock/products/products.component.html
+++ b/src/app/stock/products/products.component.html
@@ -1,7 +1,7 @@
 <div class="p-fluid grid">
     <h3 class="col-12 md:col-3">Productos</h3>
     <p-dropdown class="col-12 md:col-6" [options]="offices" [(ngModel)]="selectedOffice" 
-        (onChange)="seleccion($event)" optionLabel="name"></p-dropdown>
+        (onChange)="seleccion($event)" optionLabel="name" name="selectedOffice"></p-dropdown>
 </div>
  
 
