--- a/src/app/stock/movements/movements.component.html
+++ b/src/app/stock/movements/movements.component.html
@@ -7,3 +7,5 @@
 </p-dialog>
 
 <p-toast></p-toast>
+
+<p-confirmDialog header="Confirmar movimiento" icon="pi pi-exclamation-triangle"></p-confirmDialog>
