--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,15 @@ body {
     color: #fff;
     border: 1px solid #304562;
 }
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
